# functional-python

./: README.md  pyproject.toml  test.py
functional_python/: __init__.py  lib.py  super.py
